--- a/mail_full_expand/i18n/es_CO.po
+++ b/mail_full_expand/i18n/es_CO.po
@@ -11,8 +11,9 @@ msgstr ""
 "POT-Creation-Date: 2016-11-29 14:24+0000\n"
 "PO-Revision-Date: 2016-11-29 14:24+0000\n"
 "Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2016\n"
-"Language-Team: Spanish (https://www.transifex.com/oca/teams/23907/es/)\n"
-"Language: es\n"
+"Language-Team: Spanish (Colombia) (https://www.transifex.com/oca/teams/23907/"
+"es_CO/)\n"
+"Language: es_CO\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
@@ -33,4 +34,4 @@ msgstr "Mensaje"
 #. module: mail_full_expand
 #: model:ir.actions.act_window,name:mail_full_expand.mail_message_action
 msgid "Read Full Email"
-msgstr "Leer correo completo"
+msgstr ""
