--- a/mail_full_expand/i18n/it.po
+++ b/mail_full_expand/i18n/it.po
@@ -4,15 +4,16 @@
 #
 # Translators:
 # OCA Transbot <transbot@odoo-community.org>, 2016
+# Marius Marolla <mariusmarolla@gmail.com>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 10.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-11-29 14:24+0000\n"
-"PO-Revision-Date: 2016-11-29 14:24+0000\n"
-"Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2016\n"
-"Language-Team: Spanish (https://www.transifex.com/oca/teams/23907/es/)\n"
-"Language: es\n"
+"POT-Creation-Date: 2017-05-17 01:02+0000\n"
+"PO-Revision-Date: 2017-05-17 01:02+0000\n"
+"Last-Translator: Marius Marolla <mariusmarolla@gmail.com>, 2017\n"
+"Language-Team: Italian (https://www.transifex.com/oca/teams/23907/it/)\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
@@ -23,14 +24,14 @@ msgstr ""
 #: code:addons/mail_full_expand/static/src/xml/mail_full_expand.xml:10
 #, python-format
 msgid "Fully Expand"
-msgstr ""
+msgstr "Espandi Tutto"
 
 #. module: mail_full_expand
 #: model:ir.ui.view,arch_db:mail_full_expand.mail_message_view_form
 msgid "Message"
-msgstr "Mensaje"
+msgstr "Messaggio"
 
 #. module: mail_full_expand
 #: model:ir.actions.act_window,name:mail_full_expand.mail_message_action
 msgid "Read Full Email"
-msgstr "Leer correo completo"
+msgstr "Leggi Tutto"
