--- a/mail_full_expand/i18n/nl.po
+++ b/mail_full_expand/i18n/nl.po
@@ -11,8 +11,8 @@ msgstr ""
 "POT-Creation-Date: 2016-11-29 14:24+0000\n"
 "PO-Revision-Date: 2016-11-29 14:24+0000\n"
 "Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2016\n"
-"Language-Team: Spanish (https://www.transifex.com/oca/teams/23907/es/)\n"
-"Language: es\n"
+"Language-Team: Dutch (https://www.transifex.com/oca/teams/23907/nl/)\n"
+"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
@@ -28,9 +28,9 @@ msgstr ""
 #. module: mail_full_expand
 #: model:ir.ui.view,arch_db:mail_full_expand.mail_message_view_form
 msgid "Message"
-msgstr "Mensaje"
+msgstr "Bericht"
 
 #. module: mail_full_expand
 #: model:ir.actions.act_window,name:mail_full_expand.mail_message_action
 msgid "Read Full Email"
-msgstr "Leer correo completo"
+msgstr ""
