--- a/mail_full_expand/i18n/nl_NL.po
+++ b/mail_full_expand/i18n/nl_NL.po
@@ -3,16 +3,17 @@
 # * mail_full_expand
 #
 # Translators:
-# OCA Transbot <transbot@odoo-community.org>, 2016
+# Peter Hageman <hageman.p@gmail.com>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 10.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-11-29 14:24+0000\n"
-"PO-Revision-Date: 2016-11-29 14:24+0000\n"
-"Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2016\n"
-"Language-Team: Spanish (https://www.transifex.com/oca/teams/23907/es/)\n"
-"Language: es\n"
+"POT-Creation-Date: 2017-05-20 08:36+0000\n"
+"PO-Revision-Date: 2017-05-20 08:36+0000\n"
+"Last-Translator: Peter Hageman <hageman.p@gmail.com>, 2017\n"
+"Language-Team: Dutch (Netherlands) (https://www.transifex.com/oca/"
+"teams/23907/nl_NL/)\n"
+"Language: nl_NL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
@@ -28,9 +29,9 @@ msgstr ""
 #. module: mail_full_expand
 #: model:ir.ui.view,arch_db:mail_full_expand.mail_message_view_form
 msgid "Message"
-msgstr "Mensaje"
+msgstr "Bericht"
 
 #. module: mail_full_expand
 #: model:ir.actions.act_window,name:mail_full_expand.mail_message_action
 msgid "Read Full Email"
-msgstr "Leer correo completo"
+msgstr ""
