--- a/mail_full_expand/i18n/pt_BR.po
+++ b/mail_full_expand/i18n/pt_BR.po
@@ -11,12 +11,13 @@ msgstr ""
 "POT-Creation-Date: 2016-11-29 14:24+0000\n"
 "PO-Revision-Date: 2016-11-29 14:24+0000\n"
 "Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2016\n"
-"Language-Team: Spanish (https://www.transifex.com/oca/teams/23907/es/)\n"
-"Language: es\n"
+"Language-Team: Portuguese (Brazil) (https://www.transifex.com/oca/"
+"teams/23907/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #. module: mail_full_expand
 #. openerp-web
@@ -28,9 +29,9 @@ msgstr ""
 #. module: mail_full_expand
 #: model:ir.ui.view,arch_db:mail_full_expand.mail_message_view_form
 msgid "Message"
-msgstr "Mensaje"
+msgstr "Mensagem"
 
 #. module: mail_full_expand
 #: model:ir.actions.act_window,name:mail_full_expand.mail_message_action
 msgid "Read Full Email"
-msgstr "Leer correo completo"
+msgstr ""
