--- a/mail_tracking_mass_mailing/i18n/es.po
+++ b/mail_tracking_mass_mailing/i18n/es.po
@@ -3,15 +3,15 @@
 # * mail_tracking_mass_mailing
 # 
 # Translators:
-# OCA Transbot <transbot@odoo-community.org>, 2016
-# Gelo Joga Landoo <gj@landoo.es>, 2016
+# enjolras <yo@miguelrevilla.com>, 2017
+# OCA Transbot <transbot@odoo-community.org>, 2017
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 8.0\n"
+"Project-Id-Version: Odoo Server 10.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-11-25 18:06+0000\n"
-"PO-Revision-Date: 2016-11-25 18:06+0000\n"
-"Last-Translator: Gelo Joga Landoo <gj@landoo.es>, 2016\n"
+"POT-Creation-Date: 2018-02-26 01:46+0000\n"
+"PO-Revision-Date: 2018-02-26 01:46+0000\n"
+"Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2017\n"
 "Language-Team: Spanish (https://www.transifex.com/oca/teams/23907/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,103 +20,87 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. module: mail_tracking_mass_mailing
-#: field:mail.mass_mailing,avoid_resend:0
-msgid "Avoid resend"
-msgstr "Evitar reenvios"
-
-#. module: mail_tracking_mass_mailing
-#: help:mail.mass_mailing,avoid_resend:0
-msgid "Avoid to send this mass mailing email twice to the same recipient"
-msgstr ""
-"Evitar que se envíe este correo masivo dos veces al mismo destinatario"
-
-#. module: mail_tracking_mass_mailing
-#: view:mail.mail.statistics:mail_tracking_mass_mailing.view_mail_mail_statistics_form
+#: model:ir.ui.view,arch_db:mail_tracking_mass_mailing.view_mail_mail_statistics_form
 msgid "Country"
 msgstr "País"
 
 #. module: mail_tracking_mass_mailing
-#: field:mail.mail,path:0
-msgid "Discussion Path"
-msgstr ""
-
-#. module: mail_tracking_mass_mailing
 #: model:ir.model,name:mail_tracking_mass_mailing.model_mail_mail_statistics
 msgid "Email Statistics"
-msgstr "Estadísticas del email"
+msgstr "Estadísticas de email"
 
 #. module: mail_tracking_mass_mailing
-#: view:mail.mass_mailing.contact:mail_tracking_mass_mailing.view_mail_mass_mailing_contact_search
-#: field:mail.mass_mailing.contact,email_bounced:0
+#: model:ir.model.fields,field_description:mail_tracking_mass_mailing.field_mail_mass_mailing_contact_email_bounced
+#: model:ir.ui.view,arch_db:mail_tracking_mass_mailing.view_mail_mass_mailing_contact_search
 msgid "Email bounced"
-msgstr "E mail rebotado"
+msgstr "Email rebotado"
 
 #. module: mail_tracking_mass_mailing
-#: field:mail.mass_mailing.contact,email_score:0
+#: model:ir.model.fields,field_description:mail_tracking_mass_mailing.field_mail_mass_mailing_contact_email_score
 msgid "Email score"
 msgstr "Reputación del email"
 
 #. module: mail_tracking_mass_mailing
 #: model:ir.ui.menu,name:mail_tracking_mass_mailing.mail_tracking_email_menu
 msgid "Emails"
-msgstr ""
+msgstr "Emails"
 
 #. module: mail_tracking_mass_mailing
 #: model:ir.ui.menu,name:mail_tracking_mass_mailing.mail_tracking_event_menu
 msgid "Events"
-msgstr ""
+msgstr "Eventos"
 
 #. module: mail_tracking_mass_mailing
-#: field:mail.tracking.email,mail_id_int:0
+#: model:ir.model.fields,field_description:mail_tracking_mass_mailing.field_mail_tracking_email_mail_id_int
 msgid "Mail ID"
-msgstr "Mail ID"
+msgstr "ID del correo"
 
 #. module: mail_tracking_mass_mailing
-#: field:mail.tracking.email,mail_stats_id:0
+#: model:ir.model.fields,field_description:mail_tracking_mass_mailing.field_mail_tracking_email_mail_stats_id
 msgid "Mail statistics"
-msgstr "Estadísticas del email"
+msgstr "Estadísticas de correo"
 
 #. module: mail_tracking_mass_mailing
+#: model:ir.model.fields,field_description:mail_tracking_mass_mailing.field_mail_mail_statistics_mail_tracking_id
 #: model:ir.ui.menu,name:mail_tracking_mass_mailing.mail_tracking_menu
-#: field:mail.mail.statistics,mail_tracking_id:0
 msgid "Mail tracking"
-msgstr "Seguimiento del email"
+msgstr "Seguimiento de correo"
 
 #. module: mail_tracking_mass_mailing
 #: model:ir.actions.act_window,name:mail_tracking_mass_mailing.action_view_mail_tracking_email
 msgid "Mail tracking emails"
-msgstr ""
+msgstr "Emails de seguimiento de correo"
 
 #. module: mail_tracking_mass_mailing
 #: model:ir.actions.act_window,name:mail_tracking_mass_mailing.action_view_mail_tracking_event
 msgid "Mail tracking events"
-msgstr ""
+msgstr "Eventos de seguimiento de correo"
 
 #. module: mail_tracking_mass_mailing
 #: model:ir.model,name:mail_tracking_mass_mailing.model_mail_tracking_email
 msgid "MailTracking email"
-msgstr "MailTracking email"
+msgstr "Email de seguimiento de correo"
 
 #. module: mail_tracking_mass_mailing
 #: model:ir.model,name:mail_tracking_mass_mailing.model_mail_tracking_event
 msgid "MailTracking event"
-msgstr "MailTracking event"
-
-#. module: mail_tracking_mass_mailing
-#: model:ir.model,name:mail_tracking_mass_mailing.model_mail_mass_mailing
-msgid "Mass Mailing"
-msgstr "Envío masivo"
+msgstr "Evento de seguimiento de correo"
 
 #. module: mail_tracking_mass_mailing
 #: model:ir.model,name:mail_tracking_mass_mailing.model_mail_mass_mailing_contact
 msgid "Mass Mailing Contact"
-msgstr "Contacto de envío masivo"
+msgstr "Contacto de correo masivo"
 
 #. module: mail_tracking_mass_mailing
-#: field:mail.tracking.email,mass_mailing_id:0
-#: field:mail.tracking.event,mass_mailing_id:0
+#: model:ir.model.fields,field_description:mail_tracking_mass_mailing.field_mail_tracking_email_mass_mailing_id
+#: model:ir.model.fields,field_description:mail_tracking_mass_mailing.field_mail_tracking_event_mass_mailing_id
 msgid "Mass mailing"
-msgstr "Envío masivo"
+msgstr "Correo masivo"
+
+#. module: mail_tracking_mass_mailing
+#: model:ir.ui.view,arch_db:mail_tracking_mass_mailing.view_mail_mail_statistics_form
+msgid "OS"
+msgstr "SO"
 
 #. module: mail_tracking_mass_mailing
 #: model:ir.model,name:mail_tracking_mass_mailing.model_mail_mail
@@ -124,25 +108,12 @@ msgid "Outgoing Mails"
 msgstr "Correos salientes"
 
 #. module: mail_tracking_mass_mailing
-#: code:addons/mail_tracking_mass_mailing/models/mail_mass_mailing.py:28
-#, python-format
-msgid ""
-"There is no more recipients to send and 'Avoid resend' option is enabled"
-msgstr ""
-
-#. module: mail_tracking_mass_mailing
-#: view:mail.mail.statistics:mail_tracking_mass_mailing.view_mail_mail_statistics_form
-#: field:mail.mail.statistics,tracking_event_ids:0
+#: model:ir.model.fields,field_description:mail_tracking_mass_mailing.field_mail_mail_statistics_tracking_event_ids
+#: model:ir.ui.view,arch_db:mail_tracking_mass_mailing.view_mail_mail_statistics_form
 msgid "Tracking events"
 msgstr "Eventos de seguimiento"
 
 #. module: mail_tracking_mass_mailing
-#: help:mail.mail,path:0
-msgid ""
-"Used to display messages in a paragraph-based chatter using a unique path;"
-msgstr ""
-
-#. module: mail_tracking_mass_mailing
-#: view:mail.mail.statistics:mail_tracking_mass_mailing.view_mail_mail_statistics_form
+#: model:ir.ui.view,arch_db:mail_tracking_mass_mailing.view_mail_mail_statistics_form
 msgid "User agent"
 msgstr "Aplicación del usuario"
