--- a/mail_tracking_mass_mailing/i18n/pt.po
+++ b/mail_tracking_mass_mailing/i18n/pt.po
@@ -3,14 +3,15 @@
 # * mail_tracking_mass_mailing
 # 
 # Translators:
-# Tiago Baptista <tiago@baptista.net>, 2016
+# OCA Transbot <transbot@odoo-community.org>, 2017
+# Pedro Castro Silva <pedrocs@exo.pt>, 2017
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 8.0\n"
+"Project-Id-Version: Odoo Server 10.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-11-25 18:06+0000\n"
-"PO-Revision-Date: 2016-11-25 18:06+0000\n"
-"Last-Translator: Tiago Baptista <tiago@baptista.net>, 2016\n"
+"POT-Creation-Date: 2017-12-02 13:17+0000\n"
+"PO-Revision-Date: 2017-12-02 13:17+0000\n"
+"Last-Translator: Pedro Castro Silva <pedrocs@exo.pt>, 2017\n"
 "Language-Team: Portuguese (https://www.transifex.com/oca/teams/23907/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,128 +20,100 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. module: mail_tracking_mass_mailing
-#: field:mail.mass_mailing,avoid_resend:0
-msgid "Avoid resend"
-msgstr ""
-
-#. module: mail_tracking_mass_mailing
-#: help:mail.mass_mailing,avoid_resend:0
-msgid "Avoid to send this mass mailing email twice to the same recipient"
-msgstr ""
-
-#. module: mail_tracking_mass_mailing
-#: view:mail.mail.statistics:mail_tracking_mass_mailing.view_mail_mail_statistics_form
+#: model:ir.ui.view,arch_db:mail_tracking_mass_mailing.view_mail_mail_statistics_form
 msgid "Country"
 msgstr "País"
 
 #. module: mail_tracking_mass_mailing
-#: field:mail.mail,path:0
-msgid "Discussion Path"
-msgstr ""
-
-#. module: mail_tracking_mass_mailing
 #: model:ir.model,name:mail_tracking_mass_mailing.model_mail_mail_statistics
 msgid "Email Statistics"
-msgstr ""
+msgstr "Estatísticas de Email"
 
 #. module: mail_tracking_mass_mailing
-#: view:mail.mass_mailing.contact:mail_tracking_mass_mailing.view_mail_mass_mailing_contact_search
-#: field:mail.mass_mailing.contact,email_bounced:0
+#: model:ir.model.fields,field_description:mail_tracking_mass_mailing.field_mail_mass_mailing_contact_email_bounced
+#: model:ir.ui.view,arch_db:mail_tracking_mass_mailing.view_mail_mass_mailing_contact_search
 msgid "Email bounced"
-msgstr ""
+msgstr "Email devolvido"
 
 #. module: mail_tracking_mass_mailing
-#: field:mail.mass_mailing.contact,email_score:0
+#: model:ir.model.fields,field_description:mail_tracking_mass_mailing.field_mail_mass_mailing_contact_email_score
 msgid "Email score"
-msgstr ""
+msgstr "Pontuação do email"
 
 #. module: mail_tracking_mass_mailing
 #: model:ir.ui.menu,name:mail_tracking_mass_mailing.mail_tracking_email_menu
 msgid "Emails"
-msgstr ""
+msgstr "Emails"
 
 #. module: mail_tracking_mass_mailing
 #: model:ir.ui.menu,name:mail_tracking_mass_mailing.mail_tracking_event_menu
 msgid "Events"
-msgstr ""
+msgstr "Eventos"
 
 #. module: mail_tracking_mass_mailing
-#: field:mail.tracking.email,mail_id_int:0
+#: model:ir.model.fields,field_description:mail_tracking_mass_mailing.field_mail_tracking_email_mail_id_int
 msgid "Mail ID"
-msgstr ""
+msgstr "ID do Email"
 
 #. module: mail_tracking_mass_mailing
-#: field:mail.tracking.email,mail_stats_id:0
+#: model:ir.model.fields,field_description:mail_tracking_mass_mailing.field_mail_tracking_email_mail_stats_id
 msgid "Mail statistics"
-msgstr ""
+msgstr "Estatísticas de correio"
 
 #. module: mail_tracking_mass_mailing
+#: model:ir.model.fields,field_description:mail_tracking_mass_mailing.field_mail_mail_statistics_mail_tracking_id
 #: model:ir.ui.menu,name:mail_tracking_mass_mailing.mail_tracking_menu
-#: field:mail.mail.statistics,mail_tracking_id:0
 msgid "Mail tracking"
-msgstr ""
+msgstr "Rastreamento de correio"
 
 #. module: mail_tracking_mass_mailing
 #: model:ir.actions.act_window,name:mail_tracking_mass_mailing.action_view_mail_tracking_email
 msgid "Mail tracking emails"
-msgstr ""
+msgstr "Emails rastreados"
 
 #. module: mail_tracking_mass_mailing
 #: model:ir.actions.act_window,name:mail_tracking_mass_mailing.action_view_mail_tracking_event
 msgid "Mail tracking events"
-msgstr ""
+msgstr "Eventos rastreados"
 
 #. module: mail_tracking_mass_mailing
 #: model:ir.model,name:mail_tracking_mass_mailing.model_mail_tracking_email
 msgid "MailTracking email"
-msgstr ""
+msgstr "Email do MailTracking"
 
 #. module: mail_tracking_mass_mailing
 #: model:ir.model,name:mail_tracking_mass_mailing.model_mail_tracking_event
 msgid "MailTracking event"
-msgstr ""
-
-#. module: mail_tracking_mass_mailing
-#: model:ir.model,name:mail_tracking_mass_mailing.model_mail_mass_mailing
-msgid "Mass Mailing"
-msgstr ""
+msgstr "Evento do MailTracking"
 
 #. module: mail_tracking_mass_mailing
 #: model:ir.model,name:mail_tracking_mass_mailing.model_mail_mass_mailing_contact
 msgid "Mass Mailing Contact"
-msgstr ""
+msgstr "Contacto do email em massa"
 
 #. module: mail_tracking_mass_mailing
-#: field:mail.tracking.email,mass_mailing_id:0
-#: field:mail.tracking.event,mass_mailing_id:0
+#: model:ir.model.fields,field_description:mail_tracking_mass_mailing.field_mail_tracking_email_mass_mailing_id
+#: model:ir.model.fields,field_description:mail_tracking_mass_mailing.field_mail_tracking_event_mass_mailing_id
 msgid "Mass mailing"
-msgstr ""
+msgstr "Emails em massa"
+
+#. module: mail_tracking_mass_mailing
+#: model:ir.ui.view,arch_db:mail_tracking_mass_mailing.view_mail_mail_statistics_form
+msgid "OS"
+msgstr "S.O."
 
 #. module: mail_tracking_mass_mailing
 #: model:ir.model,name:mail_tracking_mass_mailing.model_mail_mail
 msgid "Outgoing Mails"
-msgstr ""
+msgstr "Mensagens a Enviar"
 
 #. module: mail_tracking_mass_mailing
-#: code:addons/mail_tracking_mass_mailing/models/mail_mass_mailing.py:28
-#, python-format
-msgid ""
-"There is no more recipients to send and 'Avoid resend' option is enabled"
-msgstr ""
-
-#. module: mail_tracking_mass_mailing
-#: view:mail.mail.statistics:mail_tracking_mass_mailing.view_mail_mail_statistics_form
-#: field:mail.mail.statistics,tracking_event_ids:0
+#: model:ir.model.fields,field_description:mail_tracking_mass_mailing.field_mail_mail_statistics_tracking_event_ids
+#: model:ir.ui.view,arch_db:mail_tracking_mass_mailing.view_mail_mail_statistics_form
 msgid "Tracking events"
-msgstr ""
+msgstr "Eventos de rastreamento"
 
 #. module: mail_tracking_mass_mailing
-#: help:mail.mail,path:0
-msgid ""
-"Used to display messages in a paragraph-based chatter using a unique path;"
-msgstr ""
-
-#. module: mail_tracking_mass_mailing
-#: view:mail.mail.statistics:mail_tracking_mass_mailing.view_mail_mail_statistics_form
+#: model:ir.ui.view,arch_db:mail_tracking_mass_mailing.view_mail_mail_statistics_form
 msgid "User agent"
-msgstr ""
+msgstr "Agente do utilizador"
