--- a/mass_mailing_event_registration_exclude/i18n/eu.po
+++ b/mass_mailing_event_registration_exclude/i18n/eu.po
@@ -8,15 +8,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 10.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-12-01 02:19+0000\n"
-"PO-Revision-Date: 2017-12-01 02:19+0000\n"
+"POT-Creation-Date: 2018-01-16 03:47+0000\n"
+"PO-Revision-Date: 2018-01-16 03:47+0000\n"
 "Last-Translator: OCA Transbot <transbot@odoo-community.org>, 2017\n"
-"Language-Team: Croatian (https://www.transifex.com/oca/teams/23907/hr/)\n"
+"Language-Team: Basque (https://www.transifex.com/oca/teams/23907/eu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Language: hr\n"
-"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"Language: eu\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. module: mass_mailing_event
 #: model:ir.model,name:mass_mailing_event.model_event_registration
@@ -31,17 +31,17 @@ msgstr ""
 #. module: mass_mailing_event
 #: model:ir.model.fields,field_description:mass_mailing_event.field_event_registration_state_create_uid
 msgid "Created by"
-msgstr "Stvorio/la"
+msgstr "Nork sortua"
 
 #. module: mass_mailing_event
 #: model:ir.model.fields,field_description:mass_mailing_event.field_event_registration_state_create_date
 msgid "Created on"
-msgstr "Stvoreno dana"
+msgstr "Created on"
 
 #. module: mass_mailing_event
 #: model:ir.model.fields,field_description:mass_mailing_event.field_event_registration_state_display_name
 msgid "Display Name"
-msgstr "Prikaži naziv"
+msgstr "Izena erakutsi"
 
 #. module: mass_mailing_event
 #: model:ir.model.fields,field_description:mass_mailing_event.field_mail_mass_mailing_event_id
@@ -61,17 +61,17 @@ msgstr "ID"
 #. module: mass_mailing_event
 #: model:ir.model.fields,field_description:mass_mailing_event.field_event_registration_state___last_update
 msgid "Last Modified on"
-msgstr "Zadnja izmjena"
+msgstr ""
 
 #. module: mass_mailing_event
 #: model:ir.model.fields,field_description:mass_mailing_event.field_event_registration_state_write_uid
 msgid "Last Updated by"
-msgstr "Zadnju izmjenu izvršio/la"
+msgstr "Last Updated by"
 
 #. module: mass_mailing_event
 #: model:ir.model.fields,field_description:mass_mailing_event.field_event_registration_state_write_date
 msgid "Last Updated on"
-msgstr "Zadnja izmjena"
+msgstr "Last Updated on"
 
 #. module: mass_mailing_event
 #: model:ir.model,name:mass_mailing_event.model_mail_mass_mailing
@@ -81,17 +81,17 @@ msgstr ""
 #. module: mass_mailing_event
 #: model:ir.model,name:mass_mailing_event.model_mail_mass_mailing_contact
 msgid "Mass Mailing Contact"
-msgstr "Kontakti za masovno slanje"
+msgstr ""
 
 #. module: mass_mailing_event
 #: model:ir.model.fields,field_description:mass_mailing_event.field_event_registration_state_name
 msgid "Name"
-msgstr "Naziv"
+msgstr "Izena"
 
 #. module: mass_mailing_event
 #: model:ir.model,name:mass_mailing_event.model_res_partner
 msgid "Partner"
-msgstr "Partner"
+msgstr "Kidea"
 
 #. module: mass_mailing_event
 #: model:ir.model,name:mass_mailing_event.model_event_registration_state
