--- a/website_mass_mailing_name/i18n/website_mass_mailing_name.pot
+++ b/website_mass_mailing_name/i18n/website_mass_mailing_name.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 10.0\n"
+"Project-Id-Version: Odoo Server 12.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
@@ -14,7 +14,7 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: website_mass_mailing_name
-#: model:ir.ui.view,arch_db:website_mass_mailing_name.s_newsletter_subscribe_form
+#: model_terms:ir.ui.view,arch_db:website_mass_mailing_name.s_newsletter_subscribe_form
 msgid "your name..."
 msgstr ""
 
