--- a/mail_full_expand/i18n/mail_full_expand.pot
+++ b/mail_full_expand/i18n/mail_full_expand.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 10.0\n"
+"Project-Id-Version: Odoo Server 12.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
@@ -14,6 +14,11 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: mail_full_expand
+#: model_terms:ir.ui.view,arch_db:mail_full_expand.mail_message_view_form
+msgid "Close"
+msgstr ""
+
+#. module: mail_full_expand
 #. openerp-web
 #: code:addons/mail_full_expand/static/src/xml/mail_full_expand.xml:10
 #, python-format
@@ -21,7 +26,7 @@ msgid "Fully Expand"
 msgstr ""
 
 #. module: mail_full_expand
-#: model:ir.ui.view,arch_db:mail_full_expand.mail_message_view_form
+#: model_terms:ir.ui.view,arch_db:mail_full_expand.mail_message_view_form
 msgid "Message"
 msgstr ""
 
