--- a/mass_mailing_resend/i18n/mass_mailing_resend.pot
+++ b/mass_mailing_resend/i18n/mass_mailing_resend.pot
@@ -1,12 +1,12 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* mass_mailing_resend
+# 	* mass_mailing_resend
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 12.0\n"
+"Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: <>\n"
+"Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15,11 +15,15 @@ msgstr ""
 
 #. module: mass_mailing_resend
 #: model_terms:ir.ui.view,arch_db:mass_mailing_resend.view_mail_mass_mailing_form
-msgid "<i class=\"fa fa-info-circle\"/> New sending will be done only to not sent/new recipients. If you want to resend again the mass mailing to already sent recipients, click on <b>Emails Sent</b> smart-button for removing the existing record(s)."
+msgid ""
+"<i class=\"fa fa-info-circle\"/> New sending will be done only to not "
+"sent/new recipients. If you want to resend again the mass mailing to already"
+" sent recipients, click on <b>Emails Sent</b> smart-button for removing the "
+"existing record(s)."
 msgstr ""
 
 #. module: mass_mailing_resend
-#: model:ir.model,name:mass_mailing_resend.model_mail_mass_mailing
+#: model:ir.model,name:mass_mailing_resend.model_mailing_mailing
 msgid "Mass Mailing"
 msgstr ""
 
@@ -29,8 +33,7 @@ msgid "Resend"
 msgstr ""
 
 #. module: mass_mailing_resend
-#: code:addons/mass_mailing_resend/models/mass_mailing.py:15
+#: code:addons/mass_mailing_resend/models/mailing_mailing.py:0
 #, python-format
 msgid "You can't resend a mass mailing that is being sent or in draft state."
 msgstr ""
-
