--- a/mail_tracking_mailgun/i18n/mail_tracking_mailgun.pot
+++ b/mail_tracking_mailgun/i18n/mail_tracking_mailgun.pot
@@ -1,12 +1,12 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* mail_tracking_mailgun
+# 	* mail_tracking_mailgun
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 12.0\n"
+"Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: <>\n"
+"Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -14,25 +14,31 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: mail_tracking_mailgun
-#: code:addons/mail_tracking_mailgun/models/res_partner.py:92
+#: code:addons/mail_tracking_mailgun/models/res_partner.py:0
 #, python-format
-msgid "%s couldn't be verified. Either the request couln't be completed or the mailbox provider doesn't support email verification"
+msgid ""
+"%s couldn't be verified. Either the request couln't be completed or the "
+"mailbox provider doesn't support email verification"
 msgstr ""
 
 #. module: mail_tracking_mailgun
-#: code:addons/mail_tracking_mailgun/models/res_partner.py:82
+#: code:addons/mail_tracking_mailgun/models/res_partner.py:0
 #, python-format
-msgid "%s failed the mailbox verification. Please check it in order to avoid sending issues"
+msgid ""
+"%s failed the mailbox verification. Please check it in order to avoid "
+"sending issues"
 msgstr ""
 
 #. module: mail_tracking_mailgun
-#: code:addons/mail_tracking_mailgun/models/res_partner.py:73
+#: code:addons/mail_tracking_mailgun/models/res_partner.py:0
 #, python-format
-msgid "%s is not a valid email address. Please check it in order to avoid sending issues"
+msgid ""
+"%s is not a valid email address. Please check it in order to avoid sending "
+"issues"
 msgstr ""
 
 #. module: mail_tracking_mailgun
-#: code:addons/mail_tracking_mailgun/models/mail_tracking_email.py:75
+#: code:addons/mail_tracking_mailgun/models/mail_tracking_email.py:0
 #, python-format
 msgid "A Mailgun domain value is needed!"
 msgstr ""
@@ -53,27 +59,28 @@ msgid "Contact"
 msgstr ""
 
 #. module: mail_tracking_mailgun
-#: code:addons/mail_tracking_mailgun/models/mail_tracking_email.py:239
+#: code:addons/mail_tracking_mailgun/models/mail_tracking_email.py:0
 #, python-format
 msgid "Couldn't retrieve Mailgun information"
 msgstr ""
 
 #. module: mail_tracking_mailgun
-#: code:addons/mail_tracking_mailgun/models/res_partner.py:33
+#: code:addons/mail_tracking_mailgun/models/res_partner.py:0
 #, python-format
-msgid "Email has been bounced: %s\n"
+msgid ""
+"Email has been bounced: %s\n"
 "Reason: %s\n"
 "Event: %s"
 msgstr ""
 
 #. module: mail_tracking_mailgun
-#: code:addons/mail_tracking_mailgun/models/res_partner.py:60
+#: code:addons/mail_tracking_mailgun/models/res_partner.py:0
 #, python-format
 msgid "Error %s trying to check mailof connection"
 msgstr ""
 
 #. module: mail_tracking_mailgun
-#: code:addons/mail_tracking_mailgun/models/mail_tracking_email.py:243
+#: code:addons/mail_tracking_mailgun/models/mail_tracking_email.py:0
 #, python-format
 msgid "Event information not longer stored"
 msgstr ""
@@ -99,7 +106,7 @@ msgid "Mailgun"
 msgstr ""
 
 #. module: mail_tracking_mailgun
-#: code:addons/mail_tracking_mailgun/models/res_partner.py:67
+#: code:addons/mail_tracking_mailgun/models/res_partner.py:0
 #, python-format
 msgid "Mailgun Error. Mailbox verification value wasn't returned"
 msgstr ""
@@ -120,13 +127,13 @@ msgid "Set Bounced"
 msgstr ""
 
 #. module: mail_tracking_mailgun
-#: code:addons/mail_tracking_mailgun/models/mail_tracking_email.py:69
+#: code:addons/mail_tracking_mailgun/models/mail_tracking_email.py:0
 #, python-format
 msgid "There is no Mailgun API key!"
 msgstr ""
 
 #. module: mail_tracking_mailgun
-#: code:addons/mail_tracking_mailgun/models/mail_tracking_email.py:226
+#: code:addons/mail_tracking_mailgun/models/mail_tracking_email.py:0
 #, python-format
 msgid "There is no tracked message!"
 msgstr ""
@@ -137,14 +144,15 @@ msgid "Unset Bounced"
 msgstr ""
 
 #. module: mail_tracking_mailgun
-#: code:addons/mail_tracking_mailgun/models/res_partner.py:48
+#: code:addons/mail_tracking_mailgun/models/res_partner.py:0
 #, python-format
-msgid "You need to configure mailgun.validation_key in order to be able to check mails validity"
+msgid ""
+"You need to configure mailgun.validation_key in order to be able to check "
+"mails validity"
 msgstr ""
 
 #. module: mail_tracking_mailgun
-#: code:addons/mail_tracking_mailgun/models/res_partner.py:32
+#: code:addons/mail_tracking_mailgun/models/res_partner.py:0
 #, python-format
 msgid "unknown"
 msgstr ""
-
