--- a/mail_outbound_static/i18n/mail_outbound_static.pot
+++ b/mail_outbound_static/i18n/mail_outbound_static.pot
@@ -20,6 +20,14 @@ msgstr ""
 msgid "Display Name"
 msgstr ""
 
+#: code:addons/mail_outbound_static/models/ir_mail_server.py:0
+#, python-format
+msgid ""
+"%s is not a valid domain. Please define a list of valid domains separated by"
+" comma"
+msgstr ""
+
+#. module: mail_outbound_static
 #: model:ir.model.fields,help:mail_outbound_static.field_ir_mail_server__domain_whitelist
 msgid ""
 "Allowed Domains list separated by commas. If there is not given SMTP server "
@@ -56,7 +64,7 @@ msgstr ""
 #. module: mail_outbound_static
 #: code:addons/mail_outbound_static/models/ir_mail_server.py:0
 #, python-format
-msgid "Please define a list of domains separate by comma"
+msgid "Not a valid Email From"
 msgstr ""
 
 #. module: mail_outbound_static
