[IMP] if server has no catchall support, there should be Reply-To message field modified, so the replies returns to the same address, we used for 'From' field So there is special flag added, user can easily turn this option on

--- a/mail_outbound_static/i18n/mail_outbound_static.pot
+++ b/mail_outbound_static/i18n/mail_outbound_static.pot
@@ -67,6 +67,18 @@ msgid "Not a valid Email From"
 msgstr ""
 
 #. module: mail_outbound_static
+#: model:ir.model.fields,field_description:mail_outbound_static.field_ir_mail_server__reply_to_the_same_address
+msgid "Reply To The Same Address"
+msgstr ""
+
+#. module: mail_outbound_static
+#: model:ir.model.fields,help:mail_outbound_static.field_ir_mail_server__reply_to_the_same_address
+msgid ""
+"If you have no catchall support for  this server and will activate "
+"this option, Reply-To address will be the same as From address."
+msgstr ""
+
+#. module: mail_outbound_static
 #: model:ir.model.fields,help:mail_outbound_static.field_ir_mail_server__smtp_from
 msgid ""
 "Set this in order to email from a specific address. If the original "
